Updated swagger to latest version
