# influxdb2/domain/notification_endpoint_type.py
@@ -14,15 +14,21 @@ import pprint
 import re  # noqa: F401
 
 import six
-from influxdb2.domain.notification_endpoint_base import NotificationEndpointBase
 
 
-class SMTPNotificationEndpoint(NotificationEndpointBase):
+class NotificationEndpointType(object):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
     Do not edit the class manually.
     """
+
+    """
+    allowed enum values
+    """
+    SLACK = "slack"
+    PAGERDUTY = "pagerduty"
+    WEBHOOK = "webhook"
 
     """
     Attributes:
@@ -32,65 +38,14 @@ class SMTPNotificationEndpoint(NotificationEndpointBase):
                             and the value is json key in definition.
     """
     openapi_types = {
-        'name': 'str',
-        'id': 'str',
-        'org_id': 'str',
-        'user_id': 'str',
-        'created_at': 'datetime',
-        'updated_at': 'datetime',
-        'description': 'str',
-        'status': 'str',
-        'labels': 'list[Label]'
     }
 
     attribute_map = {
-        'name': 'name',
-        'id': 'id',
-        'org_id': 'orgID',
-        'user_id': 'userID',
-        'created_at': 'createdAt',
-        'updated_at': 'updatedAt',
-        'description': 'description',
-        'status': 'status',
-        'labels': 'labels'
     }
 
-    def __init__(self, name=None, id=None, org_id=None, user_id=None, created_at=None, updated_at=None, description=None, status='active', labels=None):  # noqa: E501
-        """SMTPNotificationEndpoint - a model defined in OpenAPI"""  # noqa: E501
-        NotificationEndpointBase.__init__(self, id=id, org_id=org_id, user_id=user_id, created_at=created_at, updated_at=updated_at, description=description, status=status, labels=labels)
-
-        self._name = None
+    def __init__(self):  # noqa: E501
+        """NotificationEndpointType - a model defined in OpenAPI"""  # noqa: E501
         self.discriminator = None
-
-        if name is not None:
-            self.name = name
-
-    @property
-    def name(self):
-        """Gets the name of this SMTPNotificationEndpoint.  # noqa: E501
-
-
-        :return: The name of this SMTPNotificationEndpoint.  # noqa: E501
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name):
-        """Sets the name of this SMTPNotificationEndpoint.
-
-
-        :param name: The name of this SMTPNotificationEndpoint.  # noqa: E501
-        :type: str
-        """
-        allowed_values = ["smtp"]  # noqa: E501
-        if name not in allowed_values:
-            raise ValueError(
-                "Invalid value for `name` ({0}), must be one of {1}"  # noqa: E501
-                .format(name, allowed_values)
-            )
-
-        self._name = name
 
     def to_dict(self):
         """Returns the model properties as a dict"""
@@ -126,7 +81,7 @@ class SMTPNotificationEndpoint(NotificationEndpointBase):
 
     def __eq__(self, other):
         """Returns true if both objects are equal"""
-        if not isinstance(other, SMTPNotificationEndpoint):
+        if not isinstance(other, NotificationEndpointType):
             return False
 
         return self.__dict__ == other.__dict__
