# scripts/swagger.yml
@@ -4207,6 +4207,11 @@ paths:
       parameters:
         - $ref: '#/components/parameters/TraceSpan'
         - in: query
+          name: name
+          description: only returns tasks with the specified name
+          schema:
+            type: string
+        - in: query
           name: after
           schema:
             type: string
@@ -8053,6 +8058,8 @@ components:
           type: string
         type:
           type: string
+        templateID:
+          type: string
         description:
           type: string
         version:
@@ -8844,9 +8851,6 @@ components:
         description:
           description: An optional description of the task.
           type: string
-        token:
-          description: The token to use for authenticating this task when it executes queries.
-          type: string
       required: [flux, token]
     TaskUpdateRequest:
       type: object
@@ -8871,9 +8875,6 @@ components:
         description:
           description: An optional description of the task.
           type: string
-        token:
-          description: Override the existing token associated with the task.
-          type: string
     Check:
       oneOf:
         - $ref: "#/components/schemas/DeadmanCheck"
@@ -8896,8 +8897,8 @@ components:
         orgID:
           description: the ID of the organization that owns this check.
           type: string
-        authorizationID:
-          description: The ID of the authorization used to create this check.
+        ownerID:
+          description: The ID of creator used to create this check.
           type: string
           readOnly: true
         createdAt:
@@ -8952,6 +8953,11 @@ components:
               type: array
               items:
                 $ref: "#/components/schemas/Threshold"
+    Threshold:
+      oneOf:
+        - $ref: "#/components/schemas/GreaterThreshold"
+        - $ref: "#/components/schemas/LesserThreshold"
+        - $ref: "#/components/schemas/RangeThreshold"
     DeadmanCheck:
       allOf:
         - $ref: "#/components/schemas/CheckBase"
@@ -8968,19 +8974,54 @@ components:
               type: boolean
             level:
               $ref: "#/components/schemas/CheckStatusLevel"
-    Threshold:
+    ThresholdBase:
       properties:
         level:
          $ref: "#/components/schemas/CheckStatusLevel"
         allValues:
           description: if true, only alert if all values meet threshold
           type: boolean
-        lowerBound:
-          type: number
-          format: float
-        upperBound:
-          type: number
-          format: float
+    GreaterThreshold:
+      allOf:
+        - $ref: "#/components/schemas/ThresholdBase"
+        - type: object
+          required: [type, value]
+          properties:
+            type:
+              type: string
+              enum: [greater]
+            value:
+              type: number
+              format: float
+    LesserThreshold:
+      allOf:
+        - $ref: "#/components/schemas/ThresholdBase"
+        - type: object
+          required: [type, value]
+          properties:
+            type:
+              type: string
+              enum: [lesser]
+            value:
+              type: number
+              format: float
+    RangeThreshold:
+      allOf:
+        - $ref: "#/components/schemas/ThresholdBase"
+        - type: object
+          required: [type, min, max, within]
+          properties:
+            type:
+              type: string
+              enum: [range]
+            min:
+              type: number
+              format: float
+            max:
+              type: number
+              format: float
+            within:
+              type: boolean
     CheckStatusLevel:
       description: the state to record if check matches a criteria
       type: string
@@ -9002,6 +9043,7 @@ components:
         - $ref: "#/components/schemas/SlackNotificationRule"
         - $ref: "#/components/schemas/SMTPNotificationRule"
         - $ref: "#/components/schemas/PagerDutyNotificationRule"
+        - $ref: "#/components/schemas/HTTPNotificationRule"
     NotificationRules:
       properties:
         notificationRules:
@@ -9014,7 +9056,7 @@ components:
       type: object
       required:
         - id
-        - orgid
+        - orgID
         - status
         - name
         - tagRules
@@ -9029,8 +9071,8 @@ components:
         orgID:
           description: the ID of the organization that owns this notification rule.
           type: string
-        authorizationID:
-          description: The ID of the authorization used to create this notification rule.
+        ownerID:
+          description: The ID of creator used to create this notification rule.
           type: string
           readOnly: true
         createdAt:
@@ -9110,51 +9152,75 @@ components:
         operation:
           type: string
           enum: ["equal", "notequal"]
+    HTTPNotificationRuleBase:
+      type: object
+      required: [type, url]
+      properties:
+        type:
+          type: string
+          enum: [http]
+        url:
+          type: string
+    HTTPNotificationRule:
+      allOf:
+        - $ref: "#/components/schemas/NotificationRuleBase"
+        - $ref: "#/components/schemas/HTTPNotificationRuleBase"
+    SlackNotificationRuleBase:
+      type: object
+      required: [type, messageTemplate]
+      properties:
+        type:
+          type: string
+          enum: [slack]
+        channel:
+          type: string
+        messageTemplate:
+          type: string
     SlackNotificationRule:
       allOf:
         - $ref: "#/components/schemas/NotificationRuleBase"
-        - type: object
-          required: [type, messageTemplate]
-          properties:
-            type:
-              type: string
-              enum: [slack]
-            channel:
-              type: string
-            messageTemplate:
-              type: string
+        - $ref: "#/components/schemas/SlackNotificationRuleBase"
     SMTPNotificationRule:
       allOf:
         - $ref: "#/components/schemas/NotificationRuleBase"
-        - type: object
-          required: [type, subjectTemplate, to]
-          properties:
-            type:
-              type: string
-              enum: [smtp]
-            subjectTemplate:
-              type: string
-            bodyTemplate:
-              type: string
-            to:
-              type: string
+        - $ref: "#/components/schemas/SMTPNotificationRuleBase"
+    SMTPNotificationRuleBase:
+      type: object
+      required: [type, subjectTemplate, to]
+      properties:
+        type:
+          type: string
+          enum: [smtp]
+        subjectTemplate:
+          type: string
+        bodyTemplate:
+          type: string
+        to:
+          type: string
     PagerDutyNotificationRule:
       allOf:
         - $ref: "#/components/schemas/NotificationRuleBase"
-        - type: object
-          required: [type, messageTemplate]
-          properties:
-            type:
-              type: string
-              enum: [pagerduty]
-            messageTemplate:
-              type: string
+        - $ref: "#/components/schemas/PagerDutyNotificationRuleBase"
+    PagerDutyNotificationRuleBase:
+      type: object
+      required: [type, messageTemplate]
+      properties:
+        type:
+          type: string
+          enum: [pagerduty]
+        messageTemplate:
+          type: string
     NotificationEndpoint:
       oneOf:
         - $ref: "#/components/schemas/SlackNotificationEndpoint"
-        - $ref: "#/components/schemas/SMTPNotificationEndpoint"
         - $ref: "#/components/schemas/PagerDutyNotificationEndpoint"
         - $ref: "#/components/schemas/WebhookNotificationEndpoint"
+      discriminator:
+        propertyName: type
+        mapping:
+          slack: "#/components/schemas/SlackNotificationEndpoint"
+          pagerduty:  "#/components/schemas/PagerDutyNotificationEndpoint"
+          webhook: "#/components/schemas/WebhookNotificationEndpoint"
     NotificationEndpoints:
       type: object
       properties:
@@ -9166,6 +9232,7 @@ components:
           $ref: "#/components/schemas/Links"
     NotificationEndpointBase:
       type: object
+      required: [type]
       properties:
         id:
           type: string
@@ -9184,6 +9251,8 @@ components:
         description:
           description: An optional description of the notification endpoint
           type: string
+        name:
+          type: string
         status:
           description: The status of the endpoint.
           default: active
@@ -9191,43 +9260,56 @@ components:
           enum: ["active", "inactive"]
         labels:
           $ref: "#/components/schemas/Labels"
-      required: [type]
+        type:
+          $ref: "#/components/schemas/NotificationEndpointType"
     SlackNotificationEndpoint:
       type: object
       allOf:
         - $ref: "#/components/schemas/NotificationEndpointBase"
         - type: object
+          required: [url, token]
           properties:
-            name:
+            url:
               type: string
-              enum: ["slack"]
-    SMTPNotificationEndpoint:
-      type: object
-      allOf:
-        - $ref: "#/components/schemas/NotificationEndpointBase"
-        - type: object
-          properties:
-            name:
+            token:
               type: string
-              enum: ["smtp"]
     PagerDutyNotificationEndpoint:
       type: object
       allOf:
         - $ref: "#/components/schemas/NotificationEndpointBase"
         - type: object
+          required: [url, routingKey]
           properties:
-            name:
+            url:
               type: string
-              enum: ["pagerduty"]
+            routingKey:
+              type: string
     WebhookNotificationEndpoint:
       type: object
       allOf:
         - $ref: "#/components/schemas/NotificationEndpointBase"
         - type: object
+          required: [url, authmethod, method]
           properties:
-            name:
+            url:
               type: string
-              enum: ["webhook"]
+            username:
+              type: string
+            password:
+              type: string
+            token:
+              type: string
+            method:
+              type: string
+              enum: ['POST', 'GET', 'PUT']
+            authmethod:
+              type: string
+              enum: ['none', 'basic', 'bearer']
+            contentTemplate:
+              type: string
+    NotificationEndpointType:
+      type: string
+      enum: ['slack', 'pagerduty', 'webhook']
   securitySchemes:
     BasicAuth:
       type: http
